# amon-view

./: .gitignore  pyproject.toml
src/: app.py
src/amon_view/: __init__.py  assets.py  routes.py
src/amon_view/api/: assets.py  components.py  main.py
src/amon_view/templates/: index.html  layout.html
src/amon_view/templates/components/: button.html  canvas.html  drawer.html  file-tree.html  input.html  tempCodeRunnerFile.html
src/amon_view/templates/includes/: side-bar.html
src/amon_view/validation/: button_schema.py  input_schema.py
